# This file is part of nlopt-f.
# SPDX-Identifier: Apache-2.0 OR MIT
#
# Licensed under either of Apache License, Version 2.0 or MIT license
# at your option; you may not use this file except in compliance with
# the License.
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

option(
  'nlopt_version',
  type: 'combo',
  value: 'auto',
  choices: [
    'auto',
    '2.7.0',
    '2.6.0', '2.6.1', '2.6.2',
    '2.5.0',
    '2.4.0', '2.4.1', '2.4.2',
    '2.3.0',
    '2.2.0', '2.2.1', '2.2.2', '2.2.3',
    '2.1.0', '2.1.1', '2.1.2',
    '2.0.0', '2.0.1', '2.0.2',
  ],
  description: 'NLopt version to target'
)
